# 8-ball-sim

./: CMakeLists.txt  Makefile  README.md
src/common/: input_controls.cpp  input_controls.h
src/gpu_sim/: constants.h  frame_io.h  initialization.cpp  initialization.h  main.cpp  quat_math.h  rigid_body.h  sim.cpp  sim.h  sim_cuda.cu  sim_cuda.h  sim_cuda_internal.h  sim_cuda_kernels.cu  sim_cuda_runtime.cu  sim_state.h  spatial_hash.cpp  spatial_hash.h
src/simulator/: box_sdf.h  constants.h  frame_io.h  initialization.cpp  kernels.h  main.cpp  rigid_body.h  rigid_diagnostics.h  sim.cpp  sim.h  sim_state.h  spatial_hash.cpp  vec_math.h
src/vis/: fast_viewer.cpp  visualize.py
